<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_memberlist"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_member_list" />

    <item
        android:id="@+id/navigation_scan"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_qr_scan" />

    <item
        android:id="@+id/navigation_room"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_room" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_profile" />
</menu>