<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="loginViewModel"
            type="com.example.raionhub.ui.auth.login.LoginViewModel" />
    </data>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="50dp"
        tools:context=".ui.auth.login.LoginActivity">

        <ImageView
            android:id="@+id/iv_logo_login"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo_dark" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_text_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/iet_email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_hint_email"
                android:inputType="textEmailAddress"
                android:text="@={loginViewModel.email}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pass_text_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/pass">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/iet_pass_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_hint_password"
                android:inputType="textPassword"
                android:text="@={loginViewModel.password}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_lupapass_login"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="end"
            android:text="@string/login_text_lupa_password"
            android:textAlignment="viewEnd"
            android:textAllCaps="false" />

        <!-- TODO: Kecilin ukuran buttonnya, sesuain sama mockup -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/login_text_login"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:cornerRadius="12dp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/login_text_atau" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_masuktamu_login"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/login_text_guest"
            android:textAllCaps="false" />

    </LinearLayout>

</layout>